# zephyr-course

./: .gitignore
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/boards/: app.overlay
app/boards/my_board/: Kconfig.defconfig  Kconfig.my_board  board.cmake  board.yml  my_board.dts
app/boards/our_board/: Kconfig.defconfig  Kconfig.our_board  board.yml  our_board.yaml
app/drivers/our_driver/: CMakeLists.txt  our_driver.c  our_driver.h  our_driver_shell.c
app/src/: main.cpp
dts/bindings/: our,driver.yaml
